--- a/zdl/Perceptron.ipynb
+++ b/zdl/Perceptron.ipynb
@@ -95,6 +95,158 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "x = np.array([0, 1])\n",
+    "w = np.array([0.5, 0.5])\n",
+    "b = -0.7"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0. , 0.5])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "w*x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.sum(w*x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-0.19999999999999996"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.sum(w*x) + b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def AND(x1, x2):\n",
+    "    x = np.array([x1, x2])\n",
+    "    w = np.array([0.5, 0.5])\n",
+    "    b = -0.7\n",
+    "    tmp = np.sum(w*x) + b\n",
+    "    if tmp <= 0:\n",
+    "        return 0\n",
+    "    else:\n",
+    "        return 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def NAND(x1, x2):\n",
+    "    x = np.array([x1, x2])\n",
+    "    w = np.array([-0.5, -0.5])\n",
+    "    b = 0.7\n",
+    "    tmp = np.sum(w*x) + b\n",
+    "    if tmp <= 0:\n",
+    "        return 0\n",
+    "    else:\n",
+    "        return 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def OR(x1, x2):\n",
+    "    x = np.array([x1, x2])\n",
+    "    w = np.array([0.5, 0.5])\n",
+    "    b = -0.2\n",
+    "    tmp = np.sum(w*x) + b\n",
+    "    if tmp <= 0:\n",
+    "        return 0\n",
+    "    else:\n",
+    "        return 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "1\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "def XOR(x1, x2):\n",
+    "    s1 = NAND(x1, x2)\n",
+    "    s2 = OR(x1, x2)\n",
+    "    y = AND(s1, s2)\n",
+    "    return y\n",
+    "\n",
+    "print(XOR(0, 0))\n",
+    "print(XOR(1, 0))\n",
+    "print(XOR(0, 1))\n",
+    "print(XOR(1, 1))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
